--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,24 +4,41 @@ on:
   push:
     branches: [ "master" ]
     paths-ignore:
-        - 'README.md'  
+      - 'README.md'  
   pull_request:
     branches: [ "master" ]
     paths-ignore:
-        - 'README.md'  
-
+      - 'README.md'  
 
 permissions:
   contents: read
 
 jobs:
-  build:
-
-    runs-on: ${{ matrix.os }}
+  build-ubuntu:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest] 
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11, 3.12"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest tox tox-gh-actions
+        pip install -r requirements.txt
+    - name: Test with tox
+      run: tox
+
+  build-windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v3
