--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Check Python Version
+      run: python --version
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -46,6 +48,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Check Python Version
+      run: python --version
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
