--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,29 @@
-[tox]
-envlist = python3.7, python3.8, python3.9
+[metadata]
+license = MIT
+license_file = LICENSE
+classifiers = 
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Operating System :: OS Independent
 
-[gh-actions]
-python = 
-    3.7: python3.7
-    3.8: python3.8
-    3.9: python3.9
+[options]
+install_requires = 
+    ensure==1.0.2
+    py-youtube==1.1.7
+python_requires = >=3.7
 
-[testenv]
-deps = -rrequirements_dev.txt
-commands = 
-    # stop the build if there are Python syntax errors or undefined names
-    flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
-    # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    # type linting
-    mypy src/
-    # pytest unit
-    pytest -v tests/unit
-    # pytest integration
-    pytest -v tests/integration
+[options.extras_require]
+testing =
+    pytest>=7.1.3
+    mypy>=0.971
+    flake8>=5.0.4
+    tox>=3.25.1
+    black>=22.8.0
+
+[options.package_data]
+IPYNBrenderer = py.typed
+
+[flake8]
+max-line-length = 160
+exclude = __init__.py
