--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [build-system]
-requires = ["setuptools>=42.0", "wheel"]
+requires = ['setuptools>=42.0', "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
-testpaths=[
+testpaths = [
     "tests"
-]
+    ]
+addopts = "-v -s"
 
 [tool.mypy]
-my_path="src"
-ignore_missing_imports=true
+mypy_path = "src"
+ignore_missing_imports = true
