--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,6 @@ commands =
     # type linting
     mypy src/
     # pytest unit
-    pytest -v tests/unit
+    pytest -v -s tests/unit
     # pytest integration
     pytest -v tests/integration
